--- a/main.scss
+++ b/main.scss
@@ -1,13 +1,12 @@
 @import "scss/mixin";
 @import "scss/variable";
 
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   border: none;
-//   outline: 1px solid white;
+  //   outline: 1px solid white;
 }
 html {
   font-size: 10px;
@@ -25,21 +24,23 @@ a {
 
 .container {
   background-color: #302c42;
-  width: 100%;
-  height: 100vh;
+  //   width: 100%;
+  // height: 100vh;
   padding: 5rem 8.4rem;
+
+  //   -------header started--------
 
   .header {
     width: 100%;
     margin-inline: auto;
     // border: 1px solid white;
     .header_navbar {
-        // border: 1px solid red;
-        width: 100%;
-      @include d-flex(center, space-between, _, _);
+      // border: 1px solid red;
+      width: 100%;
+      @include d-flex(center, space-between, 0);
 
       .header_navbar_logo {
-        @include d-flex(center, space-between, _, _);
+        @include d-flex(center, space-between, 0);
         width: 19.3rem;
         .header_navbar_logo_img {
           width: 10.2rem;
@@ -55,31 +56,31 @@ a {
 
       .header_navbar_menu {
         width: 39rem;
-        @include d-flex(center, space-between, _, _);
+        @include d-flex(center, space-between, 0);
 
         .header_navbar_menu_item {
           .header_navbar_menu_item_link {
-            @include font-style($--primary-color,1.2rem, 700, 1.4rem);
+            @include font-style($--primary-color, 1.2rem, 700, 1.4rem);
           }
         }
       }
 
       .header_navbar_button {
         width: 34.7rem;
-        @include d-flex(center, space-between, _, _);
+        @include d-flex(center, space-between, 0);
 
         .header_navbar_button_item_link {
-          @include d-flex(center, center, _, _);
+          @include d-flex(center, center, 0);
           border-radius: 4rem;
           width: 15.4rem;
           height: 4.8rem;
         }
         .header_navbar_button_item_link_contactUs {
-          @include font-style($--primary-color,1.2rem, 700, 1.4rem);
+          @include font-style($--primary-color, 1.2rem, 700, 1.4rem);
           border: 2px solid $--primary-color;
         }
         .header_navbar_button_item_link_hydra {
-          @include font-style(#343045,1.2rem, 700, 1.4rem);
+          @include font-style(#343045, 1.2rem, 700, 1.4rem);
           background-image: $--button-linear-gradient;
         }
       }
@@ -90,24 +91,130 @@ a {
     }
   }
 
-  @media screen and (max-width:768px) {
-    html{
-        font-size: 5px !important;  /* important yazmasam işləmir */
+  @media screen and (max-width: 768px) {
+    html {
+      font-size: 5px; /* important yazmasam işləmir */
     }
-    body{
-        font-size: 1.6rem !important; /* important yazmasam işləmir */
+    body {
+      font-size: 1.6rem; /* important yazmasam işləmir */
     }
 
-    .header_navbar_icon{
-        display: block !important; /* important yazmasam işləmir */
+    .header_navbar_menu {
+      display: none; /* important yazmasam işləmir */
     }
-    .header_navbar_menu{
-        display: none !important; /* important yazmasam işləmir */
+    .header_navbar_button {
+      display: none; /* important yazmasam işləmir */
     }
-    .header_navbar_button{
-        display: none !important; /* important yazmasam işləmir */
+    .header_navbar_icon {
+      display: block; /* important yazmasam işləmir */
+    }
+  }
+  //   -------header ended--------
+
+  //   -------main started--------
+
+  //   -------main_banner started--------
+
+  .main_banner {
+    display: flex;
+    flex-direction: column;
+    margin-top: 9.8rem;
+
+    .main_banner_top {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      // border: 1px solid rgb(255, 255, 255);
+
+      .main_banner_top_text {
+        width: 40%;
+        // border: 1px solid white;
+        .main_banner_top_text_main {
+          .main_banner_top_text_main_title {
+            @include font-style($--primary-color, 4.6rem, 700, 5.6rem);
+            .main_banner_top_text_main_title_linear {
+              background-image: $--text-linear-gradient;
+              color: transparent;
+              background-clip: text;
+            }
+          }
+        }
+        .main_banner_top_text_paragraph {
+          margin-top: 3.6rem;
+          @include font-style($--primary-color, 1.6rem, 400, 2rem);
+        }
+        .main_banner_top_text_button {
+          @include d-flex(center, flex-start, 4rem);
+          margin-top: 4rem;
+          // border: 1px solid white;
+          .main_banner_top_text_button_link {
+            @include d-flex(center, center, 0);
+            @include font-style(#343045, 1.2rem, 700, 1.4rem);
+            border-radius: 4rem;
+            background-image: $--button-linear-gradient;
+            width: 21.4rem;
+            height: 4.8rem;
+          }
+          .main_banner_top_text_button_img {
+            @include d-flex(center, center, 0);
+            width: 4.1rem;
+            height: 3.3rem;
+            object-fit: cover;
+            cursor: pointer;
+          }
+        }
+      }
+      .main_banner_top_img {
+        width: 52rem;
+        height: 45rem;
+        object-fit: cover;
+        border-radius: 10rem 10rem 10rem 24rem;
+        border: 1.8rem solid rgba(0, 0, 0, 0.13);
+      }
+    }
+
+    .main_banner_bottom {
+      @include d-grid(1fr 1fr 1fr,0);
+      margin-top: 8.8rem;
+      width: 100%;
+      height: 16.7rem;
+      border-radius: 9rem;
+      background-image: $--radial-gradient;
+      padding-block: 2.8rem;
+      .main_banner_bottom_item {
+        @include d-flex(center, center, 2.3rem);
+        padding-inline: 4rem;
+        // border: 1px solid red;
+        border-right: 1px solid #C0B7E854;
+        .main_banner_bottom_icon{
+          display: none;
+        }
+
+        .main_banner_bottom_item_icon{
+          width: 4.4rem;
+          height: 4.4rem;
+          object-fit: contain;
+          // border: 1px solid red;
+        }
+        .main_banner_bottom_item_text{
+          .main_banner_bottom_item_text_title{
+            @include font-style($--primary-color,2.4rem,700,2.9rem);
+          }
+          .main_banner_bottom_item_text_paragraph{
+            @include font-style($--primary-color,1.4rem,400,1.7rem);
+            // border: 1px solid white;
+
+          }
+        }
+      }
+      .main_banner_bottom_item:last-child{
+        border: none;
+
+      }
     }
   }
 
+  //   -------main_banner ended--------
 
+  //   -------main ended--------
 }
