--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -2,3 +2,5 @@ $--primary-color: #ffffff;
 
 $--button-linear-gradient: linear-gradient(to right, #8176af, #c0b7e8);
 $--radial-gradient: radial-gradient(#403a5f, #211e2e);
+
+$--text-linear-gradient: linear-gradient(to right, #C0B7E8, #8176AF);
