--- a/main.css
+++ b/main.css
@@ -25,8 +25,6 @@ a {
 
 .container {
   background-color: #302c42;
-  width: 100%;
-  height: 100vh;
   padding: 5rem 8.4rem;
 }
 .container .header {
@@ -38,15 +36,13 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: _;
-  flex-wrap: _;
+  gap: 0;
 }
 .container .header .header_navbar .header_navbar_logo {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: _;
-  flex-wrap: _;
+  gap: 0;
   width: 19.3rem;
 }
 .container .header .header_navbar .header_navbar_logo .header_navbar_logo_img {
@@ -66,8 +62,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: _;
-  flex-wrap: _;
+  gap: 0;
 }
 .container .header .header_navbar .header_navbar_menu .header_navbar_menu_item .header_navbar_menu_item_link {
   color: #ffffff;
@@ -80,15 +75,13 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: _;
-  flex-wrap: _;
+  gap: 0;
 }
 .container .header .header_navbar .header_navbar_button .header_navbar_button_item_link {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: _;
-  flex-wrap: _;
+  gap: 0;
   border-radius: 4rem;
   width: 15.4rem;
   height: 4.8rem;
@@ -112,18 +105,133 @@ a {
 }
 @media screen and (max-width: 768px) {
   .container html {
-    font-size: 5px !important; /* important yazmasam işləmir */
+    font-size: 5px; /* important yazmasam işləmir */
   }
   .container body {
-    font-size: 1.6rem !important; /* important yazmasam işləmir */
-  }
-  .container .header_navbar_icon {
-    display: block !important; /* important yazmasam işləmir */
+    font-size: 1.6rem; /* important yazmasam işləmir */
   }
   .container .header_navbar_menu {
-    display: none !important; /* important yazmasam işləmir */
+    display: none; /* important yazmasam işləmir */
   }
   .container .header_navbar_button {
-    display: none !important; /* important yazmasam işləmir */
+    display: none; /* important yazmasam işləmir */
   }
+  .container .header_navbar_icon {
+    display: block; /* important yazmasam işləmir */
+  }
+}
+.container .main_banner {
+  display: flex;
+  flex-direction: column;
+  margin-top: 9.8rem;
+}
+.container .main_banner .main_banner_top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.container .main_banner .main_banner_top .main_banner_top_text {
+  width: 40%;
+}
+.container .main_banner .main_banner_top .main_banner_top_text .main_banner_top_text_main .main_banner_top_text_main_title {
+  color: #ffffff;
+  font-size: 4.6rem;
+  font-weight: 700;
+  line-height: 5.6rem;
+}
+.container .main_banner .main_banner_top .main_banner_top_text .main_banner_top_text_main .main_banner_top_text_main_title .main_banner_top_text_main_title_linear {
+  background-image: linear-gradient(to right, #C0B7E8, #8176AF);
+  color: transparent;
+  -webkit-background-clip: text;
+          background-clip: text;
+}
+.container .main_banner .main_banner_top .main_banner_top_text .main_banner_top_text_paragraph {
+  margin-top: 3.6rem;
+  color: #ffffff;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 2rem;
+}
+.container .main_banner .main_banner_top .main_banner_top_text .main_banner_top_text_button {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 4rem;
+  margin-top: 4rem;
+}
+.container .main_banner .main_banner_top .main_banner_top_text .main_banner_top_text_button .main_banner_top_text_button_link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0;
+  color: #343045;
+  font-size: 1.2rem;
+  font-weight: 700;
+  line-height: 1.4rem;
+  border-radius: 4rem;
+  background-image: linear-gradient(to right, #8176af, #c0b7e8);
+  width: 21.4rem;
+  height: 4.8rem;
+}
+.container .main_banner .main_banner_top .main_banner_top_text .main_banner_top_text_button .main_banner_top_text_button_img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0;
+  width: 4.1rem;
+  height: 3.3rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  cursor: pointer;
+}
+.container .main_banner .main_banner_top .main_banner_top_img {
+  width: 52rem;
+  height: 45rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 10rem 10rem 10rem 24rem;
+  border: 1.8rem solid rgba(0, 0, 0, 0.13);
+}
+.container .main_banner .main_banner_bottom {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 0;
+  margin-top: 8.8rem;
+  width: 100%;
+  height: 16.7rem;
+  border-radius: 9rem;
+  background-image: radial-gradient(#403a5f, #211e2e);
+  padding-block: 2.8rem;
+}
+.container .main_banner .main_banner_bottom .main_banner_bottom_item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2.3rem;
+  padding-inline: 4rem;
+  border-right: 1px solid rgba(192, 183, 232, 0.3294117647);
+}
+.container .main_banner .main_banner_bottom .main_banner_bottom_item .main_banner_bottom_icon {
+  display: none;
+}
+.container .main_banner .main_banner_bottom .main_banner_bottom_item .main_banner_bottom_item_icon {
+  width: 4.4rem;
+  height: 4.4rem;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.container .main_banner .main_banner_bottom .main_banner_bottom_item .main_banner_bottom_item_text .main_banner_bottom_item_text_title {
+  color: #ffffff;
+  font-size: 2.4rem;
+  font-weight: 700;
+  line-height: 2.9rem;
+}
+.container .main_banner .main_banner_bottom .main_banner_bottom_item .main_banner_bottom_item_text .main_banner_bottom_item_text_paragraph {
+  color: #ffffff;
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.7rem;
+}
+.container .main_banner .main_banner_bottom .main_banner_bottom_item:last-child {
+  border: none;
 }/*# sourceMappingURL=main.css.map */
