--- a/main.scss
+++ b/main.scss
@@ -1,5 +1,6 @@
 @import "scss/mixin";
 @import "scss/variable";
+@import "scss/mobile_responsive";
 
 * {
   margin: 0;
@@ -14,6 +15,8 @@ html {
 body {
   font-size: 1.6rem;
   font-family: "Montserrat", sans-serif;
+  background-color: #302c42;
+  padding: 5rem 8.4rem;
 }
 ul li {
   list-style: none;
@@ -22,199 +25,480 @@ a {
   text-decoration: none;
 }
 
-.container {
-  background-color: #302c42;
-  //   width: 100%;
-  // height: 100vh;
-  padding: 5rem 8.4rem;
-
-  //   -------header started--------
-
-  .header {
+//   -------header started--------
+.header {
+  width: 100%;
+  // margin-inline: auto;
+  // border: 1px solid white;
+  .header_navbar {
+    // border: 1px solid red;
+    @include d-flex(center, space-between, 0);
     width: 100%;
-    margin-inline: auto;
-    // border: 1px solid white;
-    .header_navbar {
+
+    .header_navbar_logo {
       // border: 1px solid red;
-      width: 100%;
       @include d-flex(center, space-between, 0);
-
-      .header_navbar_logo {
-        @include d-flex(center, space-between, 0);
-        width: 19.3rem;
-        .header_navbar_logo_img {
-          width: 10.2rem;
-          height: 10.3rem;
-          object-fit: cover;
-        }
-        .header_navbar_logo_name {
-          width: 7.6rem;
-          height: 4.6rem;
-          object-fit: cover;
-        }
+      width: 19.3rem;
+      .header_navbar_logo_img {
+        width: 10.2rem;
+        height: 10.3rem;
+        object-fit: cover;
       }
-
-      .header_navbar_menu {
-        width: 39rem;
-        @include d-flex(center, space-between, 0);
-
-        .header_navbar_menu_item {
-          .header_navbar_menu_item_link {
-            @include font-style($--primary-color, 1.2rem, 700, 1.4rem);
-          }
-        }
+      .header_navbar_logo_name {
+        width: 7.6rem;
+        height: 4.6rem;
+        object-fit: cover;
       }
-
-      .header_navbar_button {
-        width: 34.7rem;
-        @include d-flex(center, space-between, 0);
-
-        .header_navbar_button_item_link {
-          @include d-flex(center, center, 0);
-          border-radius: 4rem;
-          width: 15.4rem;
-          height: 4.8rem;
-        }
-        .header_navbar_button_item_link_contactUs {
-          @include font-style($--primary-color, 1.2rem, 700, 1.4rem);
-          border: 2px solid $--primary-color;
-        }
-        .header_navbar_button_item_link_hydra {
-          @include font-style(#343045, 1.2rem, 700, 1.4rem);
-          background-image: $--button-linear-gradient;
-        }
-      }
-
-      .header_navbar_icon {
-        display: none;
-      }
-    }
-  }
-
-  @media screen and (max-width: 768px) {
-    html {
-      font-size: 5px; /* important yazmasam işləmir */
-    }
-    body {
-      font-size: 1.6rem; /* important yazmasam işləmir */
     }
 
     .header_navbar_menu {
-      display: none; /* important yazmasam işləmir */
+      width: 39rem;
+      @include d-flex(center, space-between, 0);
+
+      .header_navbar_menu_item {
+        .header_navbar_menu_item_link {
+          @include font-style($--primary-color, 1.2rem, 700, 1.4rem);
+        }
+      }
     }
+
     .header_navbar_button {
-      display: none; /* important yazmasam işləmir */
+      width: 34.7rem;
+      @include d-flex(center, space-between, 0);
+
+      .header_navbar_button_item_link {
+        @include d-flex(center, center, 0);
+        border-radius: 4rem;
+        width: 15.4rem;
+        height: 4.8rem;
+      }
+      .header_navbar_button_item_link_contactUs {
+        @include font-style($--primary-color, 1.2rem, 700, 1.4rem);
+        border: 2px solid $--primary-color;
+      }
+      .header_navbar_button_item_link_hydra {
+        @include font-style(#343045, 1.2rem, 700, 1.4rem);
+        background-image: $--button-linear-gradient;
+      }
     }
+
     .header_navbar_icon {
-      display: block; /* important yazmasam işləmir */
+      display: none;
     }
   }
-  //   -------header ended--------
+  @media screen and (max-width: 768px) {
+    .header_navbar .header_navbar_menu {
+      display: none;
+    }
+    .header_navbar .header_navbar_button {
+      display: none;
+    }
+    .header_navbar .header_navbar_icon {
+      display: block;
+    }
+  }
+  // }
+}
 
-  //   -------main started--------
+//   -------header ended--------
 
-  //   -------main_banner started--------
+//   -------main started--------
 
-  .main_banner {
+//   -------main_banner started--------
+
+.main_banner {
+  display: flex;
+  flex-direction: column;
+  margin-top: 9.8rem;
+  // border: 1px solid red;
+
+  .main_banner_top {
     display: flex;
-    flex-direction: column;
-    margin-top: 9.8rem;
+    align-items: center;
+    justify-content: space-between;
+    // border: 1px solid rgb(255, 255, 255);
 
-    .main_banner_top {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      // border: 1px solid rgb(255, 255, 255);
-
-      .main_banner_top_text {
-        width: 40%;
-        // border: 1px solid white;
-        .main_banner_top_text_main {
-          .main_banner_top_text_main_title {
-            @include font-style($--primary-color, 4.6rem, 700, 5.6rem);
-            .main_banner_top_text_main_title_linear {
-              background-image: $--text-linear-gradient;
-              color: transparent;
-              background-clip: text;
-            }
-          }
-        }
-        .main_banner_top_text_paragraph {
-          margin-top: 3.6rem;
-          @include font-style($--primary-color, 1.6rem, 400, 2rem);
-        }
-        .main_banner_top_text_button {
-          @include d-flex(center, flex-start, 4rem);
-          margin-top: 4rem;
-          // border: 1px solid white;
-          .main_banner_top_text_button_link {
-            @include d-flex(center, center, 0);
-            @include font-style(#343045, 1.2rem, 700, 1.4rem);
-            border-radius: 4rem;
-            background-image: $--button-linear-gradient;
-            width: 21.4rem;
-            height: 4.8rem;
-          }
-          .main_banner_top_text_button_img {
-            @include d-flex(center, center, 0);
-            width: 4.1rem;
-            height: 3.3rem;
-            object-fit: cover;
-            cursor: pointer;
+    .main_banner_top_text {
+      width: 40%;
+      // border: 1px solid white;
+      .main_banner_top_text_main {
+        .main_banner_top_text_main_title {
+          @include font-style($--primary-color, 4.6rem, 700, 5.6rem);
+          .main_banner_top_text_main_title_linear {
+            background-image: $--text-linear-gradient;
+            color: transparent;
+            background-clip: text;
           }
         }
       }
-      .main_banner_top_img {
-        width: 52rem;
-        height: 45rem;
-        object-fit: cover;
-        border-radius: 10rem 10rem 10rem 24rem;
-        border: 1.8rem solid rgba(0, 0, 0, 0.13);
+      .main_banner_top_text_paragraph {
+        margin-top: 3.6rem;
+        @include font-style($--primary-color, 1.6rem, 400, 2rem);
+      }
+      .main_banner_top_text_button {
+        @include d-flex(center, flex-start, 4rem);
+        margin-top: 4rem;
+        // border: 1px solid white;
+        .main_banner_top_text_button_link {
+          @include d-flex(center, center, 0);
+          @include font-style(#343045, 1.2rem, 700, 1.4rem);
+          border-radius: 4rem;
+          background-image: $--button-linear-gradient;
+          width: 21.4rem;
+          height: 4.8rem;
+        }
+        .main_banner_top_text_button_img {
+          @include d-flex(center, center, 0);
+          width: 4.1rem;
+          height: 3.3rem;
+          object-fit: cover;
+          cursor: pointer;
+        }
       }
     }
+    .main_banner_top_img {
+      width: 52rem;
+      height: 45rem;
+      object-fit: cover;
+      border-radius: 10rem 10rem 10rem 24rem;
+      border: 1.8rem solid rgba(0, 0, 0, 0.13);
+    }
+  }
 
-    .main_banner_bottom {
-      @include d-grid(1fr 1fr 1fr,0);
-      margin-top: 8.8rem;
-      width: 100%;
-      height: 16.7rem;
-      border-radius: 9rem;
-      background-image: $--radial-gradient;
-      padding-block: 2.8rem;
-      .main_banner_bottom_item {
+  .main_banner_bottom {
+    @include d-grid(1fr 1fr 1fr, 0);
+    margin-top: 8.8rem;
+    width: 100%;
+    height: 16.7rem;
+    border-radius: 9rem;
+    background-image: $--radial-gradient;
+    padding-block: 2.8rem;
+    .main_banner_bottom_item {
+      @include d-flex(center, space-between, 0);
+      padding-inline: 4rem;
+      // border: 1px solid red;
+      border-right: 1px solid #c0b7e854;
+      .main_banner_bottom_icon {
+        display: none;
+      }
+      .main_banner_bottom_item_center {
         @include d-flex(center, center, 2.3rem);
-        padding-inline: 4rem;
-        // border: 1px solid red;
-        border-right: 1px solid #C0B7E854;
-        .main_banner_bottom_icon{
-          display: none;
-        }
-
-        .main_banner_bottom_item_icon{
+        .main_banner_bottom_item_center_icon {
           width: 4.4rem;
           height: 4.4rem;
           object-fit: contain;
           // border: 1px solid red;
         }
-        .main_banner_bottom_item_text{
-          .main_banner_bottom_item_text_title{
-            @include font-style($--primary-color,2.4rem,700,2.9rem);
-          }
-          .main_banner_bottom_item_text_paragraph{
-            @include font-style($--primary-color,1.4rem,400,1.7rem);
+        .main_banner_bottom_item_center_text {
+          .main_banner_bottom_item_center_text_title {
             // border: 1px solid white;
-
+            @include font-style($--primary-color, 2.2rem, 700, 2.9rem);
+          }
+          .main_banner_bottom_item_center_text_paragraph {
+            @include font-style($--primary-color, 1.4rem, 400, 1.7rem);
+            // border: 1px solid white;
           }
         }
       }
-      .main_banner_bottom_item:last-child{
-        border: none;
+    }
+    .main_banner_bottom_item:last-child {
+      border: none;
+    }
+  }
 
+  @media screen and (max-width: 768px) {
+    .main_banner_top {
+      flex-direction: column-reverse;
+      .main_banner_top_text {
+        width: 100%;
+        flex-direction: column;
+        @include d-flex(center, center, 0);
+        text-align: center;
+
+        .main_banner_top_text_paragraph {
+          display: none;
+        }
+        .main_banner_top_text_button {
+          // border: 1px solid red;
+          width: 100%;
+          .main_banner_top_text_button_link {
+            width: 100%;
+            height: 9.6rem;
+            // font-size: 1.4rem;
+          }
+          .main_banner_top_text_button_img {
+            display: none;
+          }
+        }
+      }
+    }
+    .main_banner_bottom {
+      @include d-grid(1fr, 0);
+      .main_banner_bottom_item {
+        @include d-flex(center, space-between, 2rem);
+        border: none;
+        .main_banner_bottom_icon {
+          display: block;
+        }
+        .main_banner_bottom_item_center {
+          gap: 1rem;
+          .main_banner_bottom_item_center_text {
+            .main_banner_bottom_item_center_text_title {
+              display: none;
+            }
+          }
+        }
+        .main_banner_bottom_item_text_title {
+          display: none;
+        }
+      }
+      .main_banner_bottom_item:nth-child(2),
+      .main_banner_bottom_item:last-child {
+        display: none;
+      }
+    }
+  }
+}
+
+//   -------main_banner ended--------
+
+//   -------main_introduction_and_build started--------
+
+.main_introduction_and_build {
+  @include d-grid(1fr 1.1fr, 10rem);
+  margin-top: 9rem;
+  .main_introduction_and_build_title {
+    // border: 1px solid red;
+    .main_introduction_and_build_title_primary {
+      @include font-style(#fff, 3.6rem, 700, 4.3rem);
+    }
+    .main_introduction_and_build_title_secondary {
+      @include d-flex(center, flex-start, 3rem);
+      .main_introduction_and_build_title_secondary_text {
+        @include font-style(#fff, 3.6rem, 300, 4.3rem);
+      }
+      .main_section_title_icon {
+        max-width: 22.8rem;
+        max-height: 6rem;
       }
     }
   }
 
-  //   -------main_banner ended--------
+  .main_introduction_and_build_text {
+    @include font-style(#fff, 1.6rem, 400, 1.9rem);
+  }
 
-  //   -------main ended--------
+  @media screen and (max-width: 768px) {
+    @include d-grid(1fr, 0);
+    text-align: center;
+
+    .main_introduction_and_build_text {
+      display: none;
+    }
+    .main_section_title_icon {
+      display: none;
+    }
+    .main_introduction_and_build_title_secondary {
+      margin-top: 1.6rem;
+      flex-direction: column;
+    }
+  }
 }
+
+//   -------main_introduction_and_build ended--------
+
+//   -------main_about started--------
+
+.main_about {
+  @include d-grid(1fr 1.1fr, 10rem);
+  margin-top: 9rem;
+  .main_about_img {
+    // text-align: end;
+    .main_about_img_item {
+      width: 55.4rem;
+      height: 55.7rem;
+      object-fit: cover;
+      border-radius: 24rem 10rem 24rem 10rem;
+      box-shadow: 0px 4px 4px 0px #00000040;
+    }
+  }
+
+  .main_about_cards {
+    @include d-flex(flex-start, center, 4.2rem);
+    flex-direction: column;
+    .main_about_cards_top {
+      @include d-flex(flex-start, center, 0.5rem);
+      flex-direction: column;
+      .main_about_cards_top_title {
+        @include font-style($--primary-color, 3.6rem, 700, 4.3rem);
+      }
+      .main_about_cards_top_secondary {
+        @include font-style($--primary-color, 3.6rem, 300, 4.3rem);
+      }
+    }
+    .main_about_cards_bottom {
+      @include d-flex(flex-start, center, 2.8rem);
+      flex-direction: column;
+      .main_about_cards_bottom_text {
+        @include font-style($--primary-color, 1.6rem, 400, 1.9rem);
+      }
+      .main_about_cards_bottom_button {
+        @include font-style($--secondary-color, 1.2rem, 700, 1.4rem);
+        width: 21.4rem;
+        height: 4.8rem;
+        background-image: $--button-linear-gradient;
+        border-radius: 4rem;
+        cursor: pointer;
+      }
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    @include d-flex(center, center, 5rem);
+    flex-direction: column;
+    .main_about_cards {
+      .main_about_cards_top {
+        display: none;
+      }
+      .main_about_cards_bottom {
+        .main_about_cards_bottom_button {
+          align-self: center;
+        }
+      }
+    }
+  }
+}
+
+//   -------main_about ended--------
+
+//   -------main_cards started--------
+
+.main_cards{
+  @include d-flex(center,space-between,2rem);
+  flex-wrap: wrap;
+  margin-top: 10rem;
+.main_cards_item{
+  @include d-flex(center,flex-start,0);
+  flex-direction: column;
+  min-height: 48rem;
+  max-width: 31rem;
+  padding:2.3rem 2.5rem 4rem 2.5rem;
+ background: $--radial-gradient_item;
+  ;
+  border-radius: 4rem;
+  
+.main_cards_item_img{
+  width: 19rem;
+  height: 19rem;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 1rem solid #0E0E0E52;
+  
+}
+.main_cards_item_name{
+  @include font-style($--primary-color,2.4rem,700,2.9rem);
+  min-width: 16rem;
+  margin-top: 2.1rem;
+  padding-bottom: 1.7rem;
+  border-bottom: 1px solid #C0B7E854;
+
+}
+.main_cards_item_text{
+  @include font-style($--primary-color,1.2rem,400,1.4rem);
+  margin-top: 2.1rem;
+}
+.main_cards_item_button{
+  @include font-style($--secondary-color,1.2rem,700,1.4rem);
+  background: $--button-linear-gradient;
+  margin-top: 3.5rem;
+  width: 15.4rem;
+  height: 4.8rem;
+  border-radius: 4rem;
+  // border: 1px solid red;
+
+}
+}
+.main_cards_item_one{
+  position: relative;
+  .main_cards_icon{
+    display: none;
+    border-radius: 50%;
+    width: 5rem;
+    height: 5rem;
+    background-color: #0E0E0E52;
+    cursor: pointer;
+    position: absolute;
+    
+    .main_cards_icon_img{
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%,-50%);
+      width: 3.8rem;
+      height: 3.8rem;
+      object-fit: cover;
+      background-image: $--button-linear-gradient;
+      border-radius: 50%
+  }
+
+}
+
+.main_cards_icon_left{
+  left: 0;
+  top: 50%;
+  transform: translate(-50%,-50%);
+}
+.main_cards_icon_right{
+  right: -4.8rem;
+  top: 50%;
+  transform: translate(-50%,-50%);
+}
+}
+
+@media screen and (max-width:768px) {
+  justify-content: center;
+  
+  .main_cards_item_two,
+  .main_cards_item_three,
+  .main_cards_item_four{
+    display: none;
+  }
+  .main_cards_item_one{
+    .main_cards_icon{
+      display: block;
+    }
+  }
+
+  
+}
+}
+
+
+//   -------main_cards ended--------
+
+
+
+
+
+
+
+
+
+
+
+
+
+//   -------main_build ended--------
+
+
+
+
+
+
+
+
+
+
+
+
+//   -------main ended--------
