--- a/main.scss
+++ b/main.scss
@@ -373,124 +373,300 @@ a {
 
 //   -------main_cards started--------
 
-.main_cards{
-  @include d-flex(center,space-between,2rem);
+.main_cards {
+  @include d-flex(center, space-between, 2rem);
   flex-wrap: wrap;
   margin-top: 10rem;
-.main_cards_item{
-  @include d-flex(center,flex-start,0);
-  flex-direction: column;
-  min-height: 48rem;
-  max-width: 31rem;
-  padding:2.3rem 2.5rem 4rem 2.5rem;
- background: $--radial-gradient_item;
-  ;
-  border-radius: 4rem;
-  
-.main_cards_item_img{
-  width: 19rem;
-  height: 19rem;
-  border-radius: 50%;
-  object-fit: cover;
-  border: 1rem solid #0E0E0E52;
-  
-}
-.main_cards_item_name{
-  @include font-style($--primary-color,2.4rem,700,2.9rem);
-  min-width: 16rem;
-  margin-top: 2.1rem;
-  padding-bottom: 1.7rem;
-  border-bottom: 1px solid #C0B7E854;
+  .main_cards_item {
+    @include d-flex(center, flex-start, 0);
+    flex-direction: column;
+    min-height: 48rem;
+    max-width: 31rem;
+    padding: 2.3rem 2.5rem 4rem 2.5rem;
+    background: $--radial-gradient_item;
+    border-radius: 4rem;
 
-}
-.main_cards_item_text{
-  @include font-style($--primary-color,1.2rem,400,1.4rem);
-  margin-top: 2.1rem;
-}
-.main_cards_item_button{
-  @include font-style($--secondary-color,1.2rem,700,1.4rem);
-  background: $--button-linear-gradient;
-  margin-top: 3.5rem;
-  width: 15.4rem;
-  height: 4.8rem;
-  border-radius: 4rem;
-  // border: 1px solid red;
-
-}
-}
-.main_cards_item_one{
-  position: relative;
-  .main_cards_icon{
-    display: none;
-    border-radius: 50%;
-    width: 5rem;
-    height: 5rem;
-    background-color: #0E0E0E52;
-    cursor: pointer;
-    position: absolute;
-    
-    .main_cards_icon_img{
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%,-50%);
-      width: 3.8rem;
-      height: 3.8rem;
+    .main_cards_item_img {
+      width: 19rem;
+      height: 19rem;
+      border-radius: 50%;
       object-fit: cover;
-      background-image: $--button-linear-gradient;
-      border-radius: 50%
+      border: 1rem solid #0e0e0e52;
+    }
+    .main_cards_item_name {
+      @include font-style($--primary-color, 2.4rem, 700, 2.9rem);
+      min-width: 16rem;
+      margin-top: 2.1rem;
+      padding-bottom: 1.7rem;
+      border-bottom: 1px solid #c0b7e854;
+    }
+    .main_cards_item_text {
+      @include font-style($--primary-color, 1.2rem, 400, 1.4rem);
+      margin-top: 2.1rem;
+    }
+    .main_cards_item_button {
+      @include font-style($--secondary-color, 1.2rem, 700, 1.4rem);
+      background: $--button-linear-gradient;
+      margin-top: 3.5rem;
+      width: 15.4rem;
+      height: 4.8rem;
+      border-radius: 4rem;
+      // border: 1px solid red;
+    }
+  }
+  .main_cards_item_one {
+    position: relative;
+    .main_cards_icon {
+      display: none;
+      border-radius: 50%;
+      width: 5rem;
+      height: 5rem;
+      background-color: #0e0e0e52;
+      cursor: pointer;
+      position: absolute;
+
+      .main_cards_icon_img {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: 3.8rem;
+        height: 3.8rem;
+        object-fit: cover;
+        background-image: $--button-linear-gradient;
+        border-radius: 50%;
+      }
+    }
+
+    .main_cards_icon_left {
+      left: 0;
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
+    .main_cards_icon_right {
+      right: -4.8rem;
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 
+  @media screen and (max-width: 768px) {
+    justify-content: center;
+
+    .main_cards_item_two,
+    .main_cards_item_three,
+    .main_cards_item_four {
+      display: none;
+    }
+    .main_cards_item_one {
+      .main_cards_icon {
+        display: block;
+      }
+    }
+  }
 }
 
-.main_cards_icon_left{
-  left: 0;
-  top: 50%;
-  transform: translate(-50%,-50%);
+//   -------main_cards ended--------
+
+//   -------main_tech start--------
+
+.main_tech {
+  @include d-flex(center, flex-start, 6rem);
+  margin-top: 10rem;
+  flex-direction: column;
+  position: relative;
+
+
+  .main_tech_image {
+    position: relative;
+    padding-block: 9rem;
+    width: 100%;
+    // height: 30rem;
+    background: url("assets/img/tech_bg_image.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 9rem;
+    text-align: center;
+    .main_tech_image_title {
+      @include font-style($--primary-color, 3.6rem, 700, 4.3rem);
+    }
+    .main_tech_image_name {
+      @include font-style($--primary-color, 3.6rem, 300, 4.3rem);
+    }
+    .main_tech_icon {
+      @include d-flex(center, center, 0);
+      position: absolute;
+      width: 10rem;
+      height: 10rem;
+      background-color: #0e0e0e52;
+      border-radius: 50%;
+      bottom: 0;
+      left: 50%;
+      transform: translate(-50%, 4.6rem);
+      cursor: pointer;
+      
+      .main_tech_icon_item {
+        border-radius: 50%;
+        font-size: 3rem;
+        color: #433D60;
+        padding: 2rem;
+        // background-color: white;
+        background: linear-gradient(267.61deg, #C0B7E8 -0.6%, #8176AF 98.31%);
+      }
+    }
+  }
+
+  .main_tech_cards{
+    @include d-flex(center,center,9rem);
+    flex-wrap: wrap;
+    .main_tech_cards_icon{
+      display: none;
+    }
+    .main_tech_cards_item_img:first-child{
+      max-width: 17.4rem;
+      max-height: 17.4rem;
+      // border: 1px solid red;
+
+    }
+      .main_tech_cards_item_img{
+        // border: 1px solid white;
+        max-width: 25.2rem;
+        max-height: 25.2rem;
+        object-fit: cover;
+      }
+  }
+
+  @media screen and (max-width:768px) {
+    .main_tech_image{
+      .main_tech_icon{
+        display: none;
+      }
+    }
+    .main_tech_cards{
+      @include d-grid(1fr,0);
+      text-align: center;
+      // border: 1px solid red;
+      .main_tech_cards_item_two,
+      .main_tech_cards_item_three,
+      .main_tech_cards_item_four{
+        display: none
+      }
+      .main_tech_cards_icon{
+        @include d-flex(center,center,0);
+        position: absolute;
+        width: 8rem;
+        height: 8rem;
+        background-color: #0E0E0E52;
+        border-radius: 50%;
+        .main_tech_cards_icon_img{
+          border-radius: 50%;
+          background: $--button-linear-gradient;
+        }
+      }
+      .main_tech_cards_left_icon{
+        left: 0;
+      }
+      .main_tech_cards_right_icon{
+        right: 0;
+      }
+    }
+  }
 }
-.main_cards_icon_right{
-  right: -4.8rem;
-  top: 50%;
-  transform: translate(-50%,-50%);
+
+//   -------main_tech ended--------
+
+//   -------main_circleCards started--------
+
+.main_circleCards{
+  @include d-flex(center,center,11rem);
+  flex-wrap: wrap;
+  margin-top: 9rem;
+.main_circleCards_item{
+  @include d-flex(center,center,2.5rem);
+  flex-direction: column;
+  // border: 1px solid red;
+  position: relative;
+  .main_circleCards_item_top{
+    @include d-flex(center,center,0);
+    width: 19.8rem;
+    height: 19.8rem;
+    border-radius: 50%;
+    background-color: #0D0D0D52;
+    .main_circleCards_item_top_number{
+      @include d-flex(center,center,0);
+      width: 16rem;
+      height: 16rem;
+      border-radius: 50%;
+      background: linear-gradient(251.27deg, #C0B7E8 12.87%, #8176AF 89.33%);
+      @include font-style($--secondary-color,6.4rem,700,7.8rem)
+    }
+
+  }
+.main_circleCards_item_bottom{
+  @include d-flex(flex-start,flex-start,.8rem);
+  // border: 1px solid green;
+  .main_circleCards_item_bottom_icon{
+    display: none;
+  }
+  .main_circleCards_item_bottom_right{
+    font-size: 3rem;
+    color: #C0B7E8;
+  }
+  .main_circleCards_item_bottom_text{
+    .main_circleCards_item_bottom_text_title{
+      @include font-style($--primary-color,2.4rem,700,2.9rem)
+
+    }
+  }
 }
 }
 
 @media screen and (max-width:768px) {
-  justify-content: center;
   
-  .main_cards_item_two,
-  .main_cards_item_three,
-  .main_cards_item_four{
-    display: none;
-  }
-  .main_cards_item_one{
-    .main_cards_icon{
-      display: block;
-    }
-  }
-
-  
+    @include d-grid(1fr,0);
+      
+      .main_circleCards_itemTwo,
+      .main_circleCards_itemThree,
+      .main_circleCards_itemFour{
+        display: none;
+        // border: 1px solid red
+      }
+      .main_circleCards_item{
+        .main_circleCards_item_bottom{
+          .main_circleCards_item_bottom_icon{
+            display: block;
+            @include d-flex(center,center,0);
+            position: absolute;
+            border-radius: 50%;
+            width: 6.2rem;
+            height: 6.2rem;
+            background-color: #0E0E0E52;
+            
+            i{
+              background: linear-gradient(267.61deg, #C0B7E8 -0.6%, #8176AF 98.31%);
+              display: inline-block;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              width: 4.4rem;
+              height: 4.4rem;
+              border-radius: 50%;
+              font-size: 2rem;
+              color: #433D60;
+            }
+          }
+          .main_circleCards_item_bottom_icon_left{
+            left: -2rem;
+          }
+          .main_circleCards_item_bottom_icon_right{
+            right: -2rem;
+          }
+        }
+      }
 }
 }
 
-
-//   -------main_cards ended--------
-
-
-
-
-
-
-
-
-
-
-
-
-
-//   -------main_build ended--------
-
-
+//   -------main_circleCards ended--------
 
 
 
