--- a/scss/_mobile_responsive.scss
+++ b/scss/_mobile_responsive.scss
@@ -1,12 +1,10 @@
 
 
 @media screen and (max-width: 768px) {
-    html {
+    html,body {
       font-size: 8px !important; /* important yazmasam işləmir */
     }
-    body {
-      font-size: 1.6rem !important; /* important yazmasam işləmir */
-    }
+    
 
  
   }
